<resources>
    <string name="app_name">MemoryApplicationProject</string>
    <string name="title_text">Memory Application</string>
    <string name="text_layout">Such a good day!!!</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">login</string>
    <string name="ot_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="genderSetup">Gender</string>
    <string name="medicationListSetup">Medication List Setup</string>
    <string name="button_medication">+Medication</string>
    <string name="continueSetup">Continue</string>
    <string name="title_text_login">Login Menu</string>
    <string name="title_text_acct_create">Create Account Menu</string>
    <string name="title_text_acct_setup">Setup Account Menu</string>
    <string name="title_text_main_menu">Main Menu</string>
    <string name="games_text">Games</string>
    <string name="pills_text">Manage Medication</string>
    <string name="photo_text">Manage Photos</string>
    <string name="shopping_text">Manage Shopping List</string>
    <string name="title_gameMenu">Games Menu</string>
    <string name="game1_text">Maths games</string>
    <string name="game2_text">Match the Colour</string>
    <string name="game3_text">Concentration</string>
    <string name="game4_text">Arrange the letters</string>
    <string name="game5_text">Solve the Puzzle</string>
    <string name="default_number">0</string>
    <string name="level_start">Level: 1</string>
    <string name="number_question">What was the number?</string>
    <string name="confirm_number">Confirm</string>
    <string name="guessWord">Guess the word, by rearranging the letters</string>
    <string name="word">Word</string>
    <string name="check">Check</string>
    <string name="new_word">New</string>
    <string name="points">Points: 0</string>
    <string name="menu_option_4x4_game">4x4 Game</string>
    <string name="menu_option_3x3_game">3x3 game</string>
    <string name="menu_option_5x5_game">5x5 Game</string>
    <string name="addItemShoppingList">Add new item</string>
    <string name="addItemForShpList">Add</string>
    <string name="math_game_addition">Addition</string>
    <string name="math_game_subtraction">subtraction</string>
    <string name="math_game_multiplication">multiplication</string>
    <string name="math_game_matchNumber">Match The Number</string>
    <string name="title_gameNumbers">Games with Numbers</string>
    <string name="enter_answer">Please write your answer here:</string>
    <string name="post_title">Title</string>
    <string name="post_memory">Memory caption:</string>
    <string name="no_thoughts_hint">Write an Entry</string>
    <string name="menu_title">Add Picture</string>
    <string name="title_activity_face">FaceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>