<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MatchNumberActivity">


    <TextView
        android:id="@+id/tv_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_start"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:text="@string/default_number" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="numberSigned"
        android:digits="1234567890"
        android:hint="@string/number_question" />

    <Button
        android:id="@+id/b_confirm"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_number"
        android:textColor="@color/teal_200"
        android:background="@android:color/transparent"
        android:textSize="19sp"/>
</LinearLayout>