<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArrangeLetterActivity">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/guessWord"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/tv_word"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="" />

    <EditText
        android:id="@+id/et_guess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_word"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/word"
        android:inputType="textPersonName"
        android:text=""/>

    <Button
        android:id="@+id/b_check"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_guess"
        android:textColor="@color/teal_200"
        android:textSize="19sp"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:text="@string/check" />

    <Button
        android:id="@+id/b_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_guess"
        android:layout_marginTop="150dp"
        android:textSize="19sp"
        android:text="@string/new_word"
        android:textColor="@color/teal_200"
        android:background="@android:color/transparent"/>


</RelativeLayout>