<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b_3x3_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:padding="20dp"
        android:background="@android:color/transparent"
        android:text="@string/menu_option_3x3_game"
        android:layout_margin="10dp"/>


    <Button
        android:id="@+id/b_4x4_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:padding="20dp"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:text="@string/menu_option_4x4_game"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/b_5x5_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/teal_200"
        android:background="@android:color/transparent"
        android:text="@string/menu_option_5x5_game"
        android:layout_margin="10dp"/>

</LinearLayout>